add get_folder function in api_utils (get folder info), add folders to parser, add info about files and folders into template

--- a/web/templates/web/files.html
+++ b/web/templates/web/files.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Файлы на Яндекс.Диске</title>
+    <style>
+        ul {
+            list-style-type: none;
+            padding-left: 20px;
+        }
+        li {
+            margin: 5px 0;
+        }
+        .folder {
+            font-weight: bold;
+        }
+        .file {
+            color: #007BFF;
+        }
+    </style>
 </head>
 <body>
-Файлы из яндекс диска
+    <h1>Содержимое папки: {{ files_data.name }}</h1>
+    <p>Владелец: {{ files_data.owner }}</p>
+    <p>Создано: {{ files_data.created }}</p>
+    <p>Изменено: {{ files_data.modified }}</p>
+
+    <ul>
+        {% for item in files_data.items %}
+            <li>
+                {% if item.type == 'dir' %}
+                    <div class="folder">
+                        📁 {{ item.name }} (папка)
+                    </div>
+                    {% if item.items %}
+                        <ul>
+                            {% for subitem in item.items %}
+                                <li>
+                                    {% if subitem.type == 'dir' %}
+                                        <div class="folder">
+                                            📁 {{ subitem.name }} (папка)
+                                        </div>
+                                    {% else %}
+                                        <div class="file">
+                                            📄 <a href="{{ subitem.preview }}" target="_blank">{{ subitem.name }}</a> (файл, {{ subitem.size }} байт)
+                                        </div>
+                                    {% endif %}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% else %}
+                    <div class="file">
+                        📄 <a href="{{ item.preview }}" target="_blank">{{ item.name }}</a> (файл, {{ item.size }} байт)
+                    </div>
+                {% endif %}
+            </li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
